# cjc-utilities

./: .gitignore  README.md  pyproject.toml  setup.py
cjc_utilities/: focal_mechanism_utilities.py  get_geonet_basic_info.py
cjc_utilities/animator/: animator.py
cjc_utilities/coordinates/: README.md  coordinates.py  extract_cross_section.py
cjc_utilities/get_data/: geonet_aws_client.py  get_data.py
cjc_utilities/io/: read_growclust.py  read_hypodd.py  simul_to_obspy.py  write_simul_phs.py
cjc_utilities/magnitude_inversion/: magnitude_inversion.py
cjc_utilities/picker/: adjust_picks.py
cjc_utilities/plot_event/: plot_event.py
cjc_utilities/sac2nordic/: sac2nordic.py
src/cjc_utilities/: focal_mechanism_utilities.py  gps_viewer.py  map_plot.py
src/cjc_utilities/animator/: animator.py
src/cjc_utilities/coordinates/: extract_cross_section.py  kmeans_3d.py  scatter_animation_3d.py
src/cjc_utilities/coordinates/data/: locations.csv
src/cjc_utilities/coordinates/tests/: test_conversion.py
src/cjc_utilities/get_data/: geonet_aws_client.py  get_data.py  get_geonet_basic_info.py  gps_client.py
src/cjc_utilities/io/: inv_to_nll.py  read_rest.py  simul_to_obspy.py
src/cjc_utilities/magnitude_inversion/: test_magnitude_inversion.py
src/cjc_utilities/picker/: adjust_picks.py  seismic_picker.py
src/cjc_utilities/plot_event/: QC_detections.py  plot_event.py
